@@ -1,5 +1,7 @@
 0.11
  - Add blank lines to code after arguments processing and before return.
+ - Fix random_month_year() method. There were issue with creating before
+   date. e.g. for February 2022.
  - Update copyright years.
 
 0.10 2021-01-27T19:21:56+01:00
